Fix overflow issues with rickshaw
The hover detail popup was going out of the screen when getting closer
to the right screen edge. Updating rickshaw.min.css to 1.4.6 fixed the
issue (somehow it wasn't update on 76c03a8). Related to #848.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -201,7 +201,12 @@ h1.username {
 }
 
 #result-graph {
-	margin-top: 5px;
+    margin-top: 5px;
+    margin-right: 12px;
+}
+
+#result-graph-timeline {
+    margin-right: 12px;
 }
 
 #sidebar-inner.affix {
